added print sales report for admin
